<resources>
    <string name="app_name">NewsApi</string>

    <string name="find_icon">Find keyword</string>
    <string name="delete_icon">Delete all favourites news</string>
    <string name="filter_icon">Source</string>

    <string name="image_description">News image</string>
    <string name="image_button_description">Favourite button</string>

    <string name="author_sample">John Kelleher</string>
    <string name="date_sample">19 March 2018 | 15:03</string>
    <string name="date_sample_rv">19.03.2018 | 15:03</string>
    <string name="title_sample">Cryptocurrency Doesn\'t Pose A Risk To The Financial System … Yet, G20 Told</string>
    <string name="description_sample">Electronic Frontier Foundation joins other companies that added Bitcoin Cash payment option.Microsoft, Tor and Overstock.com accept Bitcoin and Bitcoin Cash</string>

    <string name="sort_label">Sort by</string>
    <string name="filter_label">Filter by</string>
    <string name="radio_date_label">Date</string>
    <string name="radio_popularity_label">Popularity</string>
    <string name="radio_relevance_label">Relevance</string>
    <string name="filter_date_label">Date</string>
    <string name="filter_source_label">Source</string>
    <string name="go_to_web_button">Visit web page</string>

    <string name="snackbar_error_connection">Connection error</string>
    <string name="snackbar_error_offline">Offline work. Update the data?</string>
    <string name="snackbar_action_yes">Yes</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_news">No news :(</string>
    <string name="date_and_time">Date and time</string>
    <string name="from">From</string>
    <string name="to">To</string>
</resources>
