<?xml version="1.0" encoding="utf-8"?>

<!--Надо будет переделать, мб убрать спинеры-->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:clickable="true"
    android:focusable="true">


    <android.support.constraint.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:clickable="true"
        android:focusable="true">

        <include
            android:id="@+id/toolbarFilter"
            layout="@layout/toolbar" />

        <LinearLayout
            android:id="@+id/llSort"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="8dp"
            android:paddingTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/toolbarFilter">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="16dp"
                android:text="@string/sort_label"
                android:textColor="@android:color/black"
                android:textSize="24sp"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/groupSort"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:orientation="vertical">

                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/rbDate"
                    style="@style/RadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:checked="true"
                    android:drawableEnd="?android:attr/listChoiceIndicatorSingle"
                    android:text="@string/radio_date_label"
                    android:textSize="@dimen/subtext_text_size" />

                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/rbRelevance"
                    style="@style/RadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawableEnd="?android:attr/listChoiceIndicatorSingle"
                    android:text="@string/radio_relevance_label"
                    android:textSize="@dimen/subtext_text_size" />


                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/rbPopularity"
                    style="@style/RadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawableEnd="?android:attr/listChoiceIndicatorSingle"
                    android:text="@string/radio_popularity_label"
                    android:textSize="@dimen/subtext_text_size" />

            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llFilter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/llSort">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/date_and_time"
                android:textColor="@android:color/black"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginTop="10dp"
                android:layout_weight="6"
                android:text="@string/from"
                android:textColor="@android:color/black"
                android:textSize="14sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/llFromDate"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvFromDate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableEnd="@drawable/ic_calendar"
                        android:drawableRight="@drawable/ic_calendar"
                        android:gravity="bottom|center_horizontal"
                        android:maxLines="1"
                        android:textColor="@android:color/black"
                        android:textSize="18sp"
                        tools:text="test" />

                    <View
                        android:id="@+id/vFromDate"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="3dp"
                        android:background="#acacac" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llFromTime"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvFromTime"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableEnd="@drawable/ic_time"
                        android:gravity="bottom|center_horizontal"
                        android:maxLines="1"
                        android:textColor="@android:color/black"
                        android:textSize="18sp" />

                    <View
                        android:id="@+id/vFromTime"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="3dp"
                        android:background="#acacac" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginTop="10dp"
                android:layout_weight="6"
                android:text="@string/to"
                android:textColor="@android:color/black"
                android:textSize="14sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/llToDate"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvToDate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableEnd="@drawable/ic_calendar"
                        android:gravity="bottom|center_horizontal"
                        android:maxLines="1"
                        android:textColor="@android:color/black"
                        android:textSize="18sp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="3dp"
                        android:background="#acacac" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llToTime"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvToTime"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableEnd="@drawable/ic_time"
                        android:gravity="bottom|center_horizontal"
                        android:maxLines="1"
                        android:textColor="@android:color/black"
                        android:textSize="18sp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="3dp"
                        android:background="#acacac" />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>


    </android.support.constraint.ConstraintLayout>
</ScrollView>